// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Radiobutton renders 1`] = `
<div
  className="flex flex-col gap-2"
>
  <p>
    Please select your age:
  </p>
  <label
    className="sc-hZaSAO dZJNkP"
    htmlFor="age1"
  >
    <input
      aria-label="0 - 30"
      className="sc-eHAsqE kGUOPG"
      id="age1"
      name="age"
      onClick={[Function]}
      type="radio"
    />
    <span
      className="sc-fDXmWF ggiMOl"
    >
      <div
        className="sc-kfWwvt eLaais"
      />
    </span>
    <span
      className="sc-iVxNgP iFJsOT"
    >
      0 - 30
    </span>
  </label>
  <label
    className="sc-hZaSAO dZJNkP"
    htmlFor="age2"
  >
    <input
      aria-label="31 - 60"
      className="sc-eHAsqE kGUOPG"
      id="age2"
      name="age"
      onClick={[Function]}
      type="radio"
    />
    <span
      className="sc-fDXmWF ggiMOl"
    >
      <div
        className="sc-kfWwvt eLaais"
      />
    </span>
    <span
      className="sc-iVxNgP iFJsOT"
    >
      31 - 60
    </span>
  </label>
  <label
    className="sc-hZaSAO dZJNkP"
    htmlFor="age3"
  >
    <input
      aria-label="61 - 100"
      className="sc-eHAsqE kGUOPG"
      id="age3"
      name="age"
      onClick={[Function]}
      type="radio"
    />
    <span
      className="sc-fDXmWF ggiMOl"
    >
      <div
        className="sc-kfWwvt eLaais"
      />
    </span>
    <span
      className="sc-iVxNgP iFJsOT"
    >
      61 - 100
    </span>
  </label>
</div>
`;

exports[`Radiobutton renders Checked 1`] = `
<label
  className="sc-hZaSAO dZJNkP"
>
  <input
    checked={true}
    className="sc-eHAsqE kGUOPG"
    onClick={[Function]}
    readOnly={true}
    type="radio"
  />
  <span
    className="sc-fDXmWF ggiMOl"
  >
    <div
      className="sc-kfWwvt eLaais"
    />
  </span>
  <span
    className="sc-iVxNgP iFJsOT"
  >
    Checked radio button
  </span>
</label>
`;

exports[`Radiobutton renders Disabled 1`] = `
<label
  className="sc-hZaSAO dZJNkP"
>
  <input
    className="sc-eHAsqE kGUOPG"
    disabled={true}
    onClick={[Function]}
    type="radio"
  />
  <span
    className="sc-fDXmWF ggiMOl"
  >
    <div
      className="sc-kfWwvt eLaais"
    />
  </span>
  <span
    className="sc-iVxNgP iFJsOT"
  >
    Disabled radio button
  </span>
</label>
`;

exports[`Radiobutton renders No label 1`] = `
<div
  dir="rtl"
>
  <label
    className="sc-hZaSAO dZJNkP"
    htmlFor="button1"
  >
    <input
      className="sc-eHAsqE kGUOPG"
      id="button1"
      name="button"
      onClick={[Function]}
      type="radio"
    />
    <span
      className="sc-fDXmWF ggiMOl"
    >
      <div
        className="sc-kfWwvt eLaais"
      />
    </span>
  </label>
</div>
`;

exports[`Radiobutton renders RTL 1`] = `
<div
  dir="rtl"
>
  <div
    className="flex flex-col gap-2"
  >
    <p>
      Please select your age:
    </p>
    <label
      className="sc-hZaSAO dZJNkP"
      htmlFor="age1"
    >
      <input
        aria-label="0 - 30"
        className="sc-eHAsqE kGUOPG"
        id="age1"
        name="age"
        onClick={[Function]}
        type="radio"
      />
      <span
        className="sc-fDXmWF ggiMOl"
      >
        <div
          className="sc-kfWwvt eLaais"
        />
      </span>
      <span
        className="sc-iVxNgP iFJsOT"
      >
        0 - 30
      </span>
    </label>
    <label
      className="sc-hZaSAO dZJNkP"
      htmlFor="age2"
    >
      <input
        aria-label="31 - 60"
        className="sc-eHAsqE kGUOPG"
        id="age2"
        name="age"
        onClick={[Function]}
        type="radio"
      />
      <span
        className="sc-fDXmWF ggiMOl"
      >
        <div
          className="sc-kfWwvt eLaais"
        />
      </span>
      <span
        className="sc-iVxNgP iFJsOT"
      >
        31 - 60
      </span>
    </label>
    <label
      className="sc-hZaSAO dZJNkP"
      htmlFor="age3"
    >
      <input
        aria-label="61 - 100"
        className="sc-eHAsqE kGUOPG"
        id="age3"
        name="age"
        onClick={[Function]}
        type="radio"
      />
      <span
        className="sc-fDXmWF ggiMOl"
      >
        <div
          className="sc-kfWwvt eLaais"
        />
      </span>
      <span
        className="sc-iVxNgP iFJsOT"
      >
        61 - 100
      </span>
    </label>
  </div>
</div>
`;
